# cars-price

./: .gitignore  README.md  pyproject.toml
documents/: Report.docx
notebooks/: 01_explore_and_validate_data.ipynb  02_make_features.ipynb  03_xgb_model.ipynb  03_xgb_trees_model.ipynb  04_xgb_trees_model_tuned.ipynb  05_answer_questions.ipynb  05_xgb_trees_model_tuned_less_features.ipynb  06_xgb_linear_model.ipynb  07_xgb_linear_model_tuned.ipynb  08_linear_model.ipynb  09_answer_questions.ipynb
src/: data.py  paths.py  plots.py  questions.py
