[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ciro Montañez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
