[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ciro Montañez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.3"
plotly-express = "^0.4.1"
nbformat = "^5.9.2"
matplotlib = "^3.8.3"
xgboost = "^2.0.3"
shap = "^0.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
